--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 
 server:
-  port: 8089
+  port: 8090
 spring:
   application:
-    name: learntribe-inquisitive
+    name: learntribe-assessment-reactor
   datasource:
     url: jdbc:postgresql://${domain}:5432/inquisitve
     password: password
