[maven-release-plugin] prepare release learntribe-assessment-reactor-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.smilebat.learntribe</groupId>
 	<artifactId>learntribe-assessment-reactor</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>learntribe-assessment-reactor</name>
 	<description>Initial</description>
@@ -24,7 +24,7 @@
 	<scm>
 		<developerConnection>scm:git:https://github.com/SLearnTribe/learntribe-assessment-reactor.git</developerConnection>
 		<connection>https://github.com/SLearnTribe/learntribe-assessment-reactor</connection>
-		<tag>HEAD</tag>
+		<tag>learntribe-assessment-reactor-1.0.0</tag>
 	</scm>
 	<dependencyManagement>
 		<dependencies>
