--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 	</parent>
 
 	<groupId>com.smilebat.learntribe</groupId>
-	<artifactId>learntribe-assessment-reactor</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<artifactId>openai-processor</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>learntribe-assessment-reactor</name>
+	<name>openai-processor</name>
 	<description>Initial</description>
 	<properties>
 		<java.version>11</java.version>
@@ -22,8 +22,8 @@
 	</properties>
 
 	<scm>
-		<developerConnection>scm:git:https://github.com/SLearnTribe/learntribe-assessment-reactor.git</developerConnection>
-		<connection>https://github.com/SLearnTribe/learntribe-assessment-reactor</connection>
+		<developerConnection>scm:git:https://github.com/SLearnTribe/openai-processor.git</developerConnection>
+		<connection>https://github.com/SLearnTribe/openai-processor</connection>
 		<tag>HEAD</tag>
 	</scm>
 	<dependencyManagement>
@@ -64,7 +64,6 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-			<version>2.7.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -72,7 +71,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -180,7 +187,7 @@
 							</execution>
 						</executions>
 						<configuration>
-							<repository>registry.hub.docker.com/smilebat96/learntribe-assessment-reactor</repository>
+							<repository>registry.hub.docker.com/smilebat96/openai-processor</repository>
 							<tag>${project.version}</tag>
 							<skipDockerInfo>true</skipDockerInfo>
 							<username>smilebat96</username>
