--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.smilebat.learntribe</groupId>
 		<artifactId>sbcloud-parent-pom</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.smilebat.learntribe</groupId>
@@ -17,15 +17,13 @@
 		<java.version>11</java.version>
 		<jackson.version>2.5.2</jackson.version>
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-		<model.version>1.1.7-SNAPSHOT</model.version>
-		<commons.version>1.1.5-SNAPSHOT</commons.version>
+		<model.version>1.1.8-SNAPSHOT</model.version>
+		<commons.version>1.1.6-SNAPSHOT</commons.version>
+		<docker.registry.url>registry.hub.docker.com/smilebat96/openai-processor</docker.registry.url>
+		<scm.developer.connection>scm:git:https://github.com/SLearnTribe/openai-processor.git</scm.developer.connection>
+		<scm.connection>https://github.com/SLearnTribe/openai-processor</scm.connection>
 	</properties>
 
-	<scm>
-		<developerConnection>scm:git:https://github.com/SLearnTribe/openai-processor.git</developerConnection>
-		<connection>https://github.com/SLearnTribe/openai-processor</connection>
-		<tag>HEAD</tag>
-	</scm>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -133,85 +131,10 @@
 
 	<build>
 		<plugins>
-
-
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>11</source>
-					<target>11</target>
-				</configuration>
-			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>3.0.0-M6</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
-	<profiles>
-		<profile>
-			<id>docker-deploy</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>com.spotify</groupId>
-						<artifactId>dockerfile-maven-plugin</artifactId>
-						<version>1.4.13</version>
-						<executions>
-							<execution>
-								<id>default</id>
-								<goals>
-									<goal>build</goal>
-									<goal>push</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>tag-latest</id>
-								<goals>
-									<goal>build</goal>
-									<goal>push</goal>
-								</goals>
-								<configuration>
-									<tag>latest</tag>
-								</configuration>
-							</execution>
-						</executions>
-						<configuration>
-							<repository>registry.hub.docker.com/smilebat96/openai-processor</repository>
-							<tag>${project.version}</tag>
-							<skipDockerInfo>true</skipDockerInfo>
-							<username>smilebat96</username>
-							<password>${env.DOCKER_HUB_TOKEN}</password>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-release-plugin</artifactId>
-						<version>3.0.0-M6</version>
-						<configuration>
-							<tagNameFormat>v@{project.version}</tagNameFormat>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-deploy-plugin</artifactId>
-						<version>2.8.2</version>
-						<configuration>
-							<skip>true</skip>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
