--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<docker.registry.url>registry.hub.docker.com/smilebat96/openai-processor</docker.registry.url>
 		<scm.developer.connection>scm:git:https://github.com/SLearnTribe/openai-processor.git</scm.developer.connection>
 		<scm.connection>https://github.com/SLearnTribe/openai-processor</scm.connection>
+		<start-class>com.smilebat.learntribe.openai.OpenAiProcessorApplication</start-class>
 	</properties>
 
 	<dependencyManagement>
@@ -134,6 +135,18 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.smilebat.learntribe.openai.OpenAiProcessorApplication</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
