--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.smilebat.learntribe</groupId>
 	<artifactId>openai-processor</artifactId>
-	<version>1.0.5</version>
+	<version>1.0.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>openai-processor</name>
 	<description>Initial</description>
@@ -158,8 +158,4 @@
             </plugin>
         </plugins>
 	</build>
-
-  <scm>
-    <tag>openai-processor-1.0.5</tag>
-  </scm>
 </project>
